--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,30 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
   https://github.com/Bodmer/TFT_eSPI
+build_flags=
+  -DUSER_SETUP_LOADED=1
+  -DST7789_2_DRIVER=1
+  -DTFT_WIDTH=170
+  -DTFT_HEIGHT=320
+  -DTFT_PARALLEL_8_BIT=1
+  -DTFT_RST=3
+  -DTFT_CS=4
+  -DTFT_DC=5
+  -DTFT_WR=6
+  -DTFT_RD=7
+  -DTFT_D0=8
+  -DTFT_D1=9
+  -DTFT_D2=10
+  -DTFT_D3=11
+  -DTFT_D4=12
+  -DTFT_D5=13
+  -DTFT_D6=14
+  -DTFT_D7=15
+  -DLOAD_GLCD=1
+  -DLOAD_FONT2=1
+  -DLOAD_FONT4=1
+  -DLOAD_FONT6=1
+  -DLOAD_FONT7=1
+  -DLOAD_FONT8=1
+  -DLOAD_GFXFF=1
+  -DSMOOTH_FONT=1
