--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ build_flags=
   -DTFT_WIDTH=170
   -DTFT_HEIGHT=320
   -DTFT_PARALLEL_8_BIT=1
+  -DTFT_BL=2
   -DTFT_RST=3
   -DTFT_CS=4
   -DTFT_DC=5
